インターフェース名変更

--- a/html/setting.html
+++ b/html/setting.html
@@ -34,7 +34,7 @@
     subgraph Fujiki
     B[Keyboard\nnord electro]
     C[PC\nMacbook Pro]
-    D[Audio Interface\nUR44]
+    D[Audio Interface\nUR24C]
     E[DJ Pad\nKAOSS PAD]
     end
 
